--- a/Visit It App/views/map-view.html
+++ b/Visit It App/views/map-view.html
@@ -1,3 +1,3 @@
 <div data-role="view" id="map-view" data-id="map-view" data-layout="drawer-layout" data-title="Map">
-    Map
+    <div id="geolocation" style="width: 640px; height:1136px;"></div>
 </div>
