Google maps changed api key, added googleMaps help js file, minor changes.

--- a/Visit It App/views/map-view.html
+++ b/Visit It App/views/map-view.html
@@ -1,3 +1,4 @@
-<div data-role="view" id="map-view" data-id="map-view" data-layout="drawer-layout" data-title="Map">
-    <div id="geolocation" style="width: 640px; height:1136px;"></div>
+<div data-role="view" id="map-view" data-id="map-view" data-layout="drawer-layout" data-title="Map"
+     data-show="app.viewmodels.googleMaps.initialize">
+    <div id="map"></div>
 </div>
