Location properties view canged to modalview, pending changes to binding

--- a/Visit It App/styles/main.css
+++ b/Visit It App/styles/main.css
@@ -1,3 +1,5 @@
-.km-drawer-button:before, .km-drawer-button:after  { content: "\E077"; }
-option { color:blue; }
+.km-drawer-button:before, .km-drawer-button:after 
+{ 
+	content: "\E077"; 
+}
 
