--- a/Visit It App/views/map-view.html
+++ b/Visit It App/views/map-view.html
@@ -1,4 +1,29 @@
 <div data-role="view" id="map-view" data-id="map-view" data-layout="drawer-layout" data-title="Map"
-     data-show="app.viewmodels.googleMaps.initialize">
+     data-show="app.googleMaps.initialize">
     <div id="map"></div>
+</div>
+
+<div data-role="modalview" id="location-properties-modalview" data-id="location-properties-modalview" 
+	 data-layout="drawer-layout" data->
+    <div data-role="header">
+        <div data-role="navbar">
+            <span>Properties</span>
+            <a data-click="app.googleMaps.cancelMarkerAddition" data-role="button" data-align="right">Cancel</a>
+        </div>
+    </div>
+	
+	<div id="xValue">X:123</div>
+    <div id="yValue">Y:123</div>
+    <br/>
+    <input id="datetimepicker" type="date" style="width:150px;" />
+    <br/>
+    <input id="datetimepicker" type="time" style="width:150px;" />
+    <label>Select mode
+        <select class="modes">
+            <option value="Reminder">Reminder</option>
+            <option value="Challenge">Challenge</option>
+            <option value="Spy">Spy</option>
+            <option value="Fourth Option">Fourth Option</option>
+        </select>
+    </label>
 </div>
