Reminder object added and minor renaming changes

--- a/Visit It App/views/map-view.html
+++ b/Visit It App/views/map-view.html
@@ -1,10 +1,10 @@
-<div data-role="view" id="map-view" data-id="map-view" data-layout="drawer-layout" data-title="Map"
+<div data-role="view" id="map-view" data-id="map-view" data-layout="main-layout" data-title="Map"
      data-show="app.googleMaps.initialize">
     <div id="map"></div>
 </div>
 
 <div data-role="modalview" id="location-properties-modalview" data-id="location-properties-modalview" 
-	 data-layout="drawer-layout" data->
+	 data-layout="main-layout" data->
     <div data-role="header">
         <div data-role="navbar">
             <span>Properties</span>
