--- a/Visit It App/views/challenger-mode-view.html
+++ b/Visit It App/views/challenger-mode-view.html
@@ -1,3 +1,3 @@
-<div data-role="view" id="challenger-mode-view" data-id="challenger-mode-view" data-layout="drawer-layout" data-title="Challenger">
+<div data-role="view" id="challenger-mode-view" data-id="challenger-mode-view" data-layout="main-layout" data-title="Challenger">
     Challenge
 </div>
