--- a/Visit It App/views/reminder-mode-view.html
+++ b/Visit It App/views/reminder-mode-view.html
@@ -1,3 +1,3 @@
-<div data-role="view" id="reminder-mode-view" data-id="reminder-mode-view" data-layout="drawer-layout" data-title="Reminder">
+<div data-role="view" id="reminder-mode-view" data-id="reminder-mode-view" data-layout="main-layout" data-title="Reminder">
     Reminder
 </div>
