--- a/Visit It App/views/settings-view.html
+++ b/Visit It App/views/settings-view.html
@@ -1,3 +1,3 @@
-<div data-role="view" id="settings-view" data-id="settings-view" data-layout="drawer-layout" data-title="Settings">
+<div data-role="view" id="settings-view" data-id="settings-view" data-layout="main-layout" data-title="Settings">
     Settings
 </div>
