Added functionality for adding reminders + new design for pop up

--- a/Visit It App/views/map-view.html
+++ b/Visit It App/views/map-view.html
@@ -4,26 +4,40 @@
 </div>
 
 <div data-role="modalview" id="location-properties-modalview" data-id="location-properties-modalview" 
-	 data-layout="main-layout" data->
+	 data-layout="main-layout" data-model="app.viewmodels.addReminder" style="width: 100%">
     <div data-role="header">
         <div data-role="navbar">
             <span>Properties</span>
             <a data-click="app.googleMaps.cancelMarkerAddition" data-role="button" data-align="right">Cancel</a>
         </div>
     </div>
+	<ul data-role="listview" data-style="inset">
+		<li>
+			<label>Longitude
+				<span id="longitude" data-bind="text: location.longitude"></span>
+			</label>
+		</li>
+		<li>
+			<label>Latitude
+				<span id="latitude" data-bind="text: location.latitude"></span>
+			</label>
+		</li>
+		<li>
+			<label>Title
+				<input data-bind="value: text" type="text" />
+			</label>
+		</li>
+		<li>
+			<label>Date
+				<input id="datepicker" data-bind="value: datetime" type="datetime-local" />
+			</label>
+		</li>
+		<li>
+			<label>Select mode
+				<select id="dropdown" data-bind="source: modes, value: mode"></select>
+    		</label>
+		</li>
+	</ul>
 	
-	<div id="xValue">X:123</div>
-    <div id="yValue">Y:123</div>
-    <br/>
-    <input id="datetimepicker" type="date" style="width:150px;" />
-    <br/>
-    <input id="datetimepicker" type="time" style="width:150px;" />
-    <label>Select mode
-        <select class="modes">
-            <option value="Reminder">Reminder</option>
-            <option value="Challenge">Challenge</option>
-            <option value="Spy">Spy</option>
-            <option value="Fourth Option">Fourth Option</option>
-        </select>
-    </label>
+	<button data-role="button" data-bind="events: {click: saveReminder}">Create</button>
 </div>
