Adding the choosen locations in the localStorage,  creating listViews( in Home, Challenge, Spy,Reminder views) inflated by localStorage's value while skipping the values with no or empty Name or DateTime. The values are being sorted by datetime which is bigger than the current DateTime.Icons are added for each mode + showing already selected and valid future locations on the map.

--- a/Visit It App/views/challenger-mode-view.html
+++ b/Visit It App/views/challenger-mode-view.html
@@ -1,3 +1,4 @@
-<div data-role="view" id="challenger-mode-view" data-id="challenger-mode-view" data-layout="main-layout" data-title="Challenger">
-    Challenge
+<div data-role="view" id="challenger-mode-view" data-id="challenger-mode-view" data-layout="main-layout" data-title="Challenger"
+     data-show="app.viewmodels.challenge.initialize">
+    <ul id="grouped-listview-challenge"></ul>
 </div>
