--- a/Visit It App/views/map-view.html
+++ b/Visit It App/views/map-view.html
@@ -13,12 +13,12 @@
     </div>
 	<ul data-role="listview" data-style="inset">
 		<li>
-			<label>Longitude
+            <label>Longitude:
 				<span id="longitude" data-bind="text: location.longitude"></span>
 			</label>
 		</li>
 		<li>
-			<label>Latitude
+            <label>Latitude:
 				<span id="latitude" data-bind="text: location.latitude"></span>
 			</label>
 		</li>
