--- a/Visit It App/views/reminder-mode-view.html
+++ b/Visit It App/views/reminder-mode-view.html
@@ -1,3 +1,4 @@
-<div data-role="view" id="reminder-mode-view" data-id="reminder-mode-view" data-layout="main-layout" data-title="Reminder">
-    Reminder
+<div data-role="view" id="reminder-mode-view" data-id="reminder-mode-view" data-layout="main-layout" data-title="Reminder"
+    data-show="app.viewmodels.reminder.initialize">
+    <ul id="grouped-listview-reminder"></ul>
 </div>
