--- a/Visit It App/views/spy-mode-view.html
+++ b/Visit It App/views/spy-mode-view.html
@@ -1,3 +1,4 @@
-<div data-role="view" id="spy-mode-view" data-id="spy-mode-view" data-layout="main-layout" data-title="Spy">
-    Spy
+<div data-role="view" id="spy-mode-view" data-id="spy-mode-view" data-layout="main-layout" data-title="Spy"
+     data-show="app.viewmodels.spy.initialize">
+    <ul id="grouped-listview-spy"></ul>
 </div>
