--- a/Visit It App/styles/main.css
+++ b/Visit It App/styles/main.css
@@ -2,3 +2,17 @@
 { 
 	content: "\E077"; 
 }
+
+.block {
+	display: block;
+}
+
+.button-right {
+	display: inline-block;
+	vertical-align: top;
+	float: right;
+}
+
+.inline {
+	display: inline-block;
+}
