--- a/Visit It App/views/challenger-mode-view.html
+++ b/Visit It App/views/challenger-mode-view.html
@@ -1,4 +1,4 @@
 <div data-role="view" id="challenger-mode-view" data-id="challenger-mode-view" data-layout="main-layout" data-title="Challenger"
      data-show="app.viewmodels.challenge.initialize">
-    <ul id="grouped-listview-challenge"></ul>
+    <ul id="listview-challenge" class="reminders-list"></ul>
 </div>
