Fixed bug with listview creating multiple times + styles added

--- a/Visit It App/views/map-view.html
+++ b/Visit It App/views/map-view.html
@@ -39,5 +39,5 @@
 		</li>
 	</ul>
 	
-	<button data-role="button" data-bind="events: {click: saveReminder}">Create</button>
+	<button data-role="button" data-bind="events: {click: saveReminder}" class="create-button">Create</button>
 </div>
